Includes new DB with mysql
Includes Database class handling the DB connection
Includes UserSql as new user class for mysql
Includes DAOs to interact with the DB
Includes New testing for mysql DB
Refactors controllers to use mysql DB
Includes a dump of the DB to easily import it

TO-DO: load database information from properties, not hardcoded

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.mustache.suffix=.html
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+#mysqlDatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/eatappsqldb
+spring.datasource.username=root
+spring.datasource.password=root
+logging.level.root=INFO
