--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.mustache.suffix=.html
+spring.thymeleaf.suffix=.html
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
